--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -41,6 +41,26 @@
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                        <li
+                                {% if '/dashboard' in request.path %}
+                                    class="nav-item active mr-3"
+                                {% else %}
+                                    class="nav-item mr-3"
+                                {% endif %}
+                        >
+                            <a class="nav-link" href="{% url 'dashboard' %}">{{ user.username }}'s dashboard</a>
+                        </li>
+                        <li class="nav-item mr-3">
+                            <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                                <i class="fas fa-sign-out-alt">Logout</i>
+                            </a>
+                            <form action="{% url 'logout' %}" id="logout" method="post">
+                                {% csrf_token %}
+                                <input type="hidden">
+                            </form>
+                        </li>
+                    {% else %}
                     <li
                             {% if '/register' in request.path %}
                                 class="nav-item active mr-3"
@@ -63,6 +83,7 @@
 
                             Login</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
